feat:Adding local gifs in trending view

--- a/src/app/gifs/components/gif-list/gif-list.component.html
+++ b/src/app/gifs/components/gif-list/gif-list.component.html
@@ -1,16 +1,7 @@
 
 
 <div class="grid grid-cols-2 md:grid-cols-3 gap-4">
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
-    <git-list-item/>
+  @for (gif of listGift(); track gif) {
+    <git-list-item [imageUrl]="gif"/>
+  }
 </div>
